# archivers

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  arithmetic_archiever_include.hpp  common.cpp  common.hpp  decoder.cpp  decoder_file_opener.cpp  decoder_file_opener.hpp  encoder.cpp  file_opener.cpp  file_opener.hpp  main.cpp  mingw-w64-x86_64.cmake  opt_ostream_ref.cpp  opt_ostream_ref.hpp  test.cpp
applib/: CMakeLists.txt
applib/include/applib/: decode_impl.hpp  exceptions.hpp  file_opener.hpp  log_stream_get.hpp  opt_ostream.hpp  ord_and_tail_splitter.hpp  progress_bar.hpp  u64_tail_bits.hpp  u64_tail_bytes.hpp  word_packer.hpp  words_and_flow.hpp
applib/include/applib/flow/: bits_word_flow.hpp  bytes_word_flow.hpp
applib/include/applib/flow/impl/: to_bits.hpp  to_ints.hpp
applib/include/applib/word/: bits_word.hpp  bytes_word.hpp
applib/src/: decode_impl.cpp  exceptions.cpp  file_opener.cpp  log_stream_get.cpp  opt_ostream.cpp  ord_and_tail_splitter.cpp
applib/test/: CMakeLists.txt  bits_word.cpp  bits_word_flow.cpp  bytes_word.cpp  bytes_word_flow.cpp  to_bits.cpp  to_ints.cpp  u64_tail_bits.cpp  u64_tail_bytes.cpp
arithmetic_a_archiever/: CMakeLists.txt  arithmetic_a_archiever_include.hpp  decoder.cpp  encoder.cpp  encoder_impl.hpp
arithmetic_a_contextual_archiever/: CMakeLists.txt  decoder.cpp  encoder.cpp
arithmetic_a_contextual_archiever_improved/: CMakeLists.txt  decoder.cpp  encoder.cpp
arithmetic_archiever/: CMakeLists.txt  arithmetic_archiever_include.hpp  decoder.cpp  encoder.cpp  encoder_impl.hpp
arithmetic_d_archiever/: CMakeLists.txt  arithmetic_d_archiever_include.hpp  decoder.cpp  encoder.cpp  encoder_impl.hpp
arithmetic_d_contextual_archiever/: CMakeLists.txt  decoder.cpp  encoder.cpp
arithmetic_d_contextual_archiever_improved/: CMakeLists.txt  decoder.cpp  encoder.cpp
encoding_lib/: CMakeLists.txt
encoding_lib/include/: arithmetic_coder.hpp  arithmetic_decoder.hpp
encoding_lib/include/ael/: arithmetic_coder.hpp  arithmetic_decoder.hpp  bits_iterator.hpp  byte_data_constructor.hpp  bytes_iterator.hpp  data_parser.hpp  numerical_coder.hpp  numerical_decoder.hpp  ranges_calc.hpp
encoding_lib/include/ael/dictionary/: adaptive_a_contextual_dictionary.hpp  adaptive_a_contextual_dictionary_improved.hpp  adaptive_a_dictionary.hpp  adaptive_d_contextual_dictionary.hpp  adaptive_d_contextual_dictionary_improved.hpp  adaptive_d_dictionary.hpp  adaptive_dictionary.hpp  decreasing_counts_dictionary.hpp  decreasing_on_update_dictionary.hpp  ppma_dictionary.hpp  ppmd_dictionary.hpp  ppmd_plus_dictionary.hpp  static_dictionary.hpp  uniform_dictionary.hpp  word_probability_stats.hpp
encoding_lib/include/ael/dictionary/impl/: a_d_dictionary_base.hpp  adaptive_dictionary_base.hpp  contectual_dictionary_base_improved.hpp  contextual_dictionary_base.hpp  contextual_dictionary_stats_base.hpp  cumulative_count.hpp  cumulative_unique_count.hpp
encoding_lib/include/ael/flow/: bits_word_flow.hpp  bytes_word_flow.hpp
encoding_lib/include/ael/impl/: multiply_and_divide.hpp  ranges_calc.hpp
encoding_lib/include/ael/word/: bits_word.hpp  bytes_word.hpp
encoding_lib/include/dictionary/: adaptive_d_dictionary.cpp  ppmd_dictionary.cpp  static_dictionary.cpp  uniform_dictionary.cpp
encoding_lib/include/dictionary/impl/: adaptive_dictionary_base.hpp
encoding_lib/include/flow/: bits_word_flow.hpp
encoding_lib/include/word/: bits_word.hpp  bytes_word.hpp  integer_word.hpp  uint_word.hpp
encoding_lib/src/: a_d_dictionary_base.cpp  adaptive_a_contextual_dictionary.cpp  adaptive_a_dictionary.cpp  adaptive_d_contextual_dictionary.cpp  adaptive_d_dictionary.cpp  adaptive_dictionary.cpp  byte_data_constructor.cpp  cumulative_count.cpp  cumulative_unique_count.cpp  data_parser.cpp  decreasing_on_update_dictionary.cpp  integer_random_access_iterator.hpp  multiply_and_divide.cpp  ppma_dictionary.cpp  ppmd_dictionary.cpp  ppmd_plus_dictionary.cpp  ranges_calc.cpp  static_dictionary.cpp  uniform_dictionary.cpp
encoding_lib/test/: CMakeLists.txt  adaptive_a_contextual_dictionary.cpp  adaptive_a_dictionary.cpp  adaptive_d_contextual_dictionary.cpp  adaptive_d_dictionary.cpp  bits_iterator.cpp  bits_word_flow.cpp  bytes_word_flow.cpp  data_parser.cpp  decreasing_on_update_dictionary.cpp  ppma_dictionary.cpp  ppmd_dictionary.cpp
handing_in/: CMakeLists.txt  contextual_d_decoder.cpp  contextual_d_decoder_improved.cpp  contextual_d_encoder.cpp  contextual_d_encoder_improved.cpp  numerical_decoder.cpp  numerical_encoder.cpp
include/: arithmetic_coder.hpp  arithmetic_coder_encoded.cpp  arithmetic_coder_encoded.hpp  arithmetic_decoder.hpp  arithmetic_decoder_decoded.cpp  arithmetic_decoder_decoded.hpp  binary_find.hpp  bit_flow.hpp  bit_symbol.hpp  bits_iterator.hpp  byte_data_constructor.cpp  byte_data_constructor.hpp  byte_flow.hpp  bytes_iterator.hpp  bytes_symbol.hpp  data_parser.cpp  data_parser.hpp  i_sym_flow.hpp  i_words_flow.hpp  misc.cpp  misc.hpp  ranges_calc.hpp
include/dictionary/: adaptive_a_dictionary.cpp  adaptive_a_dictionary.hpp  adaptive_d_dictionary.cpp  adaptive_d_dictionary.hpp  adaptive_dicitonary_ratio_constructor.hpp  adaptive_dictionary.cpp  (+17 more)
numerical/: CMakeLists.txt  decoder.cpp  encoder.cpp
ppma_archiever/: CMakeLists.txt  decoder.cpp  encoder.cpp
ppmd_archiever/: CMakeLists.txt  decoder.cpp  encoder.cpp  encoder_impl.hpp  ppmd_archiever_include.hpp
ppmd_plus_archiever/: CMakeLists.txt  decoder.cpp  encoder.cpp
test/: CMakeLists.txt  adaptive_a_dictionary.cpp  adaptive_d_dictionary.cpp  adaptive_dictionary.cpp  arithmetic_coder.cpp  bits_iterator.cpp  bits_word.cpp  bits_word_flow.cpp  byte_data_constructor.cpp  bytes_iterator.cpp  bytes_symbol.cpp  bytes_word.cpp  bytes_word_flow.cpp  data_parser.cpp  decreasing_counts_dictionary.cpp  decreasing_on_update_dictionary.cpp  dynamic_dictionary.cpp  integer_word.cpp  integer_word_flow.cpp  ppma_dictionary.cpp  ppmd_dictionary.cpp  static_dictionary.cpp  traits.cpp  uniform_dictionary.cpp
testing/: Correctness check.ipynb  testing.ipynb
(+32 files in other folders)
