project(arithmetic_a_contextual_archiever_improved)

add_executable(a_contextual_encoder_improved encoder.cpp)
target_link_libraries(a_contextual_encoder_improved archievers-applib arithmetic-encoding-lib)

add_executable(a_contextual_decoder_improved decoder.cpp)
target_link_libraries(a_contextual_decoder_improved archievers-applib arithmetic-encoding-lib)
